# video2midi

./: pyproject.toml  sandbox.ipynb
src/synthesia_video_to_midi/: note_detector.py  video_reader.py
