[tool.poetry]
name = "synthesia_video_to_midi"
version = "0.1.0"
description = "Reads a video file of someone playing synthesia and extracts the midi file"
authors = ["Octavio Carlos Bunge Campos <octavio@ottomundo.com.ar>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
MIDIUtil = "^1.2.1"
numpy = "^1.21.4"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
